--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-lib",
+  "name": "@SercanSercan/my-react-lib",
   "version": "0.0.1",
   "description": "A react component library",
   "scripts": {
@@ -25,5 +25,8 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "type": "module"
+  "type": "module",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/my-react-lib"
+  }
 }
