--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@SercanSercan/my-react-lib",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A react component library",
   "scripts": {
     "rollup": "rollup -c"
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "rollup": "^4.18.0",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.77.6",
     "tslib": "^2.6.3",
     "typescript": "^5.5.2"
